# cloudmesh-ai-uva

./: .clinerules  .gitignore  404.html  CHANGELOG.md  Makefile  README.md  VERSION  index.html  mkdocs.yml  objects.inv  publish.sh  pyproject.toml  requirements.txt  status.sh
docs/: api.md
docs/css/: custom.css
search/: search_index.json
site/: api.html
site/search/: search_index.json
src/cloudmesh/ai/: config.csv  hpc.py  partitions.yaml  slurm.py  uva.py
src/cloudmesh/ai/command/: hpc.py  uva.py
tests/: conftest.py  test_hpc.py  test_hpc_ui.py  test_uva_default.py
