[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudmesh-ai-uva"

dynamic = ["version"]
description = "Extension uva created by CME"
license = "Apache-2.0"
dependencies = [
    "cloudmesh-ai-cmc",
    "click",
    "rich",
    "pytest",
    "cloudmesh-ai-common",
    "questionary",
    "textual",
]
[tool.setuptools.dynamic]
version = {file = "VERSION"}

[project.entry-points."cloudmesh.ai.command"]
uva = "command.uva:register"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cloudmesh*"]
