[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudmesh-ai-hpc"

dynamic = ["version"]
description = "Extension hpc created by CME"
license = "Apache-2.0"
urls = { "Homepage" = "https://github.com/cloudmesh-ai/cloudmesh-ai-hpc" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cloudmesh-ai-cmc",
    "cloudmesh-ai-common",
    "cloudmesh-ai-vpn",
    "click",
    "pyyaml",
]

[project.optional-dependencies]
ui = [
    "textual",
    "questionary",
]
dev = [
    "pytest",
]
[tool.setuptools.dynamic]
version = {file = "VERSION"}

[project.entry-points."cloudmesh.ai.command"]
hpc = "command.hpc:register"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cloudmesh*"]
